--- a/index.htm
+++ b/index.htm
@@ -70,6 +70,7 @@ function menuSel(x){
 	
 	if(x == 0)
 	{
+		obj.data = "coGuid.txt";
 		sel.textContent = 'Check out the comment section';
 	}
 	else if(x == 1)
