--- a/index.htm
+++ b/index.htm
@@ -85,6 +85,7 @@ function menuSel(x){
 	}
 	else if(x == 3)
 	{
+		obj.data = "DJDL1.txt";
 		sel.textContent = 'but it does function';
 
 	}
@@ -123,7 +124,7 @@ By Jacob Mark Jackson </h1>
 <tr><button onclick = "menuSel('1')">Jailbreak</button></tr>
 <tr><button onclick = "menuSel('2')">The Giant Robot Debate</button></tr>
 
-<tr><button onclick = "menuSel('3')">Armageddon Insects</button></tr>
+<tr><button onclick = "menuSel('3')">Django Dlato Adventure Through Space</button></tr>
 
 <tr><button onclick = "menuSel('4')">The Comenaut</button></tr>
 </table>
